--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 ﻿<html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>CollectW admin</title>
 		<link rel="stylesheet" type="text/css" href="collectw.css">
 		<script type="text/javascript" src="jquery-2.1.1.min.js"></script>
