UI : show the loaded plugins list

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,11 @@
 						$('<tr><td>'+n.host+'</td><td>'+n.port+'</td></tr>').appendTo('#collectd_network__servers');
 					});
 				});
+				$.getJSON('/loaded_plugins_list', function(data) {
+					$(data).each(function(i,n) {
+						$('<li>'+n+'</li>').appendTo('#collectw_plugins__loaded');
+					});
+				});
 				$.getJSON('/httpconfig/port', function(data) {
 					$('#collectw_httpconfig__port').val(data.collectwHTTPPort);
 				});
@@ -61,21 +66,18 @@
 		</script>
 	</head>
 	<body>
-		<div id="block_information">
+		<div id="block_information" class="configuration_block">
 			<h1>CollectW information</h1>
 			<table>
 				<tr><th>Version</th><td><span id="version" /></td></tr>
 				<tr><th>PID</th><td><span id="collectw_pid" /></td></tr>
 			</table>
 		</div>
-		<div id="block_collectd_network">
-			<h1>CollectW network configuration</h1>
-			<p>Collectw is sending metrics to those servers :</p>
-			<table id="collectd_network__servers">
-				<tr><th>Collectd server</th><th>port</th></tr>
-			</table>
+		<div id="block_action" class="configuration_block">
+			<h1>CollectW Service</h1>
+			<input type="submit" name="submit__process__stop" id="submit__process__stop" value="Stop / Restart" /> <span>(Configure recovery option in CollectW Windows service to make it restart on stop)</span>
 		</div>
-		<div id="block_collectw_httpconfig">
+		<div id="block_collectw_httpconfig" class="configuration_block">
 			<h1>CollectW HTTP configuration tool</h1>
 			<h2>Admin user</h2>
 			<span>User :</span> <span><input type="text" name="collectw_httpconfig__user" id="collectw_httpconfig__user" /></span>
@@ -85,15 +87,22 @@
 			<span>Port</span> <span><input type="text" name="port" id="collectw_httpconfig__port" /></span>
 			<input type="submit" name="submit__collectw_httpconfig__port" id="submit__collectw_httpconfig__port" />
 		</div>
-		<hr />
-		<div id="block_action">
-			<h1>CollectW Service</h1>
-			<input type="submit" name="submit__process__stop" id="submit__process__stop" value="Stop / Restart" /> <span>(Configure recovery option in CollectW Windows service to make it restart on stop)</span>
+		<div id="block_collectd_network" class="configuration_block">
+			<h1>CollectW network configuration</h1>
+			<p>Collectw is sending metrics to those servers :</p>
+			<table id="collectd_network__servers">
+				<tr><th>Collectd server</th><th>port</th></tr>
+			</table>
 		</div>
-		<div id="block_perfmon_counters">
-			<h1>Perfmon counters</h1>
+		<div id="block_collectw_plugins" class="configuration_block">
+			<h1>Plugins in use</h1>
+			<ul id="collectw_plugins__loaded">
+			</ul>
+		</div>
+		<div id="block_perfmon_counters" class="configuration_block">
+			<h1>perfmon counters</h1>
 			<table id="perfmon_counters__list" border="1">
-				<tr><th>Collectd</th><th>Windows</th><th>Type</th></tr>
+				<tr><th>collectd</th><th>windows</th><th>type</th></tr>
 			</table>
 		</div>
 	</body>
